# pyqdes

./: README.md  main.cpp  pyproject.toml  qdes.cpp  setup.py
.github/workflows/: build.yml
